--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>no.dervis.</groupId>
-    <artifactId>functionals-java</artifactId>
+    <artifactId>fpjava</artifactId>
     <version>0.1</version>
 
     <properties>
-        <jdkVersion>20</jdkVersion>
+        <jdkVersion>21</jdkVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.5</version>
+            <version>1.4.7</version>
         </dependency>
     </dependencies>
 
